View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032686 | Open CASCADE | OCCT:Visualization | public | 2021-11-23 23:35 | 2023-03-19 18:20 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.6.1 | ||
Summary | 0032686: Visualization, Wasm_Window - filter out unexpected pressed buttons state within mouse move / up events | ||||
Description | Firefox sets non-zero MouseEvent.buttons to mouse click event emulated from a tap on touchscreen device. WebGL sample (since 0032609) selectively attaches emscripten_set_mouseup_callback() and emscripten_set_mousemove_callback() callbacks to entire window (EMSCRIPTEN_EVENT_TARGET_WINDOW) while emscripten_set_mousedown_callback() is handled for canvas. This combination leads to unexpected results - mouse button is registered by Wasm_Window::ProcessMouseEvent() as pressed and remains in this state indefinitely. It is proposed to filter out pressed buttons state within mouse up / move events when they are inconsistent to previously received mouse down events. | ||||
Steps To Reproduce | - Open WebGL sample in Firefox. - Tap onto middle of the viewer on touchscreen. - Tap onto OCC Logo (displayed on top of 3D Viewer by dedicated HTML control). Bug - viewer is suddenly rotated to new position. | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR32686 has been created by kgv. SHA-1: 3acf87e3dd26fa6bd637d21745e251a31dfd86d9 Detailed log of new commits: Author: kgv Date: Wed Nov 24 00:08:21 2021 +0300 0032686: Visualization, Wasm_Window - filter out unexpected pressed buttons state within mouse move / up events Wasm_Window::ProcessMouseEvent() now ignores not previously pressed mouse buttons within mouse move / up events. Fixed -Wshorten-64-to-32 compiler warning within cpulimit command on 32-bit Linux. |
|
Patch is ready for review - OCCT: branch CR32686. |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-11-26 master SHA - 4a837ecec21bfe24d9c224c4b59aa9779156f297 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2021-11-26 SHA - 5da5872bffc6c1fa745ee5e33ac09c4fffd349b4 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18390.380000000398 / 18549.650000000624 [-0.86%] Products Total CPU difference: 11648.280000000103 / 11661.570000000122 [-0.11%] Windows-64-VC14: OCCT Total CPU difference: 19927.859375 / 19945.046875 [-0.09%] Products Total CPU difference: 13059.03125 / 13091.625 [-0.25%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32686 has been deleted by mnt. SHA-1: 3acf87e3dd26fa6bd637d21745e251a31dfd86d9 |
occt: master b6b55c3d 2021-11-23 21:08:21 Committer: |
0032686: Visualization, Wasm_Window - filter out unexpected pressed buttons state within mouse move / up events Wasm_Window::ProcessMouseEvent() now ignores not previously pressed mouse buttons within mouse move / up events. Fixed -Wshorten-64-to-32 compiler warning within cpulimit command on 32-bit Linux. |
Affected Issues 0032686 |
|
mod - src/Draw/Draw_BasicCommands.cxx | Diff File | ||
mod - src/Wasm/Wasm_Window.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-11-23 23:35 | kgv | New Issue | |
2021-11-23 23:35 | kgv | Assigned To | => kgv |
2021-11-23 23:46 | kgv | Relationship added | child of 0032433 |
2021-11-23 23:46 | kgv | Relationship added | child of 0032609 |
2021-11-23 23:47 | kgv | Test case number | => N/A |
2021-11-23 23:47 | kgv | Description Updated | |
2021-11-24 00:08 | git | Note Added: 0105386 | |
2021-11-24 00:10 | kgv | Note Added: 0105387 | |
2021-11-24 00:10 | kgv | Assigned To | kgv => osa |
2021-11-24 00:10 | kgv | Status | new => resolved |
2021-11-25 17:30 |
|
Note Added: 0105425 | |
2021-11-25 17:30 |
|
Assigned To | osa => bugmaster |
2021-11-25 17:30 |
|
Status | resolved => reviewed |
2021-11-27 14:24 |
|
Note Added: 0105465 | |
2021-11-27 14:24 |
|
Status | reviewed => tested |
2021-11-27 14:52 |
|
Changeset attached | => occt master b6b55c3d |
2021-11-27 14:52 |
|
Assigned To | bugmaster => smoskvin |
2021-11-27 14:52 |
|
Status | tested => verified |
2021-11-27 14:52 |
|
Resolution | open => fixed |
2021-11-27 15:05 | git | Note Added: 0105490 | |
2023-03-19 18:20 | vglukhik | Status | verified => closed |
2023-03-19 18:20 | vglukhik | Fixed in Version | => 7.6.1 |