0032686: Visualization, Wasm_Window - filter out unexpected pressed buttons state within mouse move / up events

Wasm_Window::ProcessMouseEvent() now ignores not previously pressed mouse buttons within mouse move / up events.
Fixed -Wshorten-64-to-32 compiler warning within cpulimit command on 32-bit Linux.